change default editor level

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=934AB49B4A3A86B38301A09505042257
-ProjectName=Third Person BP Game Template
+ProjectName=SimCenGameJam
+
